# UBIrotate

./: .gitignore  CMakeLists.txt  COPYING  COPYING.md  Doxyfile  INSTALL.md  README  README.md
include/: Matrix.h  functions.h
src/: Matrix.cpp  functions.cpp  main.cpp
